--- a/index.html
+++ b/index.html
@@ -1,1 +1,78 @@
+<!DOCTYPE html>
+<!--=== Coding by CodingLab | www.codinglabweb.com === -->
+<html lang="en">
 
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta data-name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <!----======== CSS ======== -->
+  <link rel="stylesheet" href="style.css" />
+
+
+
+  <title>Image Gallery with Lalita</title>
+</head>
+
+<body>
+
+  <div class="container">
+    <!-- Load an icon library to show a hamburger menu (bars) on small screens -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+    <div class="topnav" id="myTopnav">
+      <a href="#" class="active">Letter</a>
+      <a href="index.html">Home</a>
+      <a href="https://open.spotify.com/playlist/7FalVngfZomEY1Tf15dWpB?si=cf97f88da25c4289">Songs for you</a>
+      <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+        <i class="fa fa-bars"></i>
+      </a>
+    </div>
+    <div class="images">
+      <div class="image-box" data-name="spiderman">
+        <img src="images/img_7.png" alt="" />
+        <a href="page1.html">
+          <h6>Read more</h6>
+        </a>
+      </div>
+
+      <div class="image-box" data-name="joker">
+        <img src="images/img_8.png" alt="" />
+        <a href="page2.html">
+          <h6>Read more</h6>
+        </a>
+      </div>
+
+      <div class="image-box" data-name="ironman">
+        <img src="images/img_9.png" alt="" />
+        <a href="page3.html">
+          <h6>Read more</h6>
+        </a>
+      </div>
+
+      <div class="image-box" data-name="passenger">
+        <img src="images/img_10.png" alt="" />
+        <a href="page4.html">
+          <h6>Read more</h6>
+        </a>
+      </div>
+      <div class="image-box" data-name="space">
+        <img src="images/img_11.png" alt="" />
+        <a href="page5.html">
+          <h6>Read more</h6>
+        </a>
+      </div>
+      <div class="image-box" data-name="spiderman">
+        <img src="images/img_12.png" alt="" />
+        <a href="page6.html">
+          <h6>Read more</h6>
+        </a>
+      </div>
+    </div>
+  </div>
+
+  <script src="script.js"></script>
+</body>
+
+</html>
